# 5A-Projet-Optimisation-de-Standard-Cells

./: .gitignore  README.md  bsim4v5.out  debug.py  debug2.py  debug_inv_1.spice  exemple_pyngs.py  main.py  pyproject.toml
data/training_weights/: index.json
data/training_weights_parallel/: index.json
data/weight/: index.json
data_cost_v1/: review_a.txt
model/: rc_filter.cir
netlists/: sky130_fd_sc_hd__xor2_1_delay.spice
old/: cell_modifier_old.py  cell_modifier_v2.py  characterization.py  dynamic_power_xor2.spice  energy_xor2.spice  gym_env-old.py  netlist_generator.py  netlist_generator_try.py  objective-old.py  parallel_env.py  parallel_rl_agent.py  rl_agent copy.py  spice_runner copy.py
results/: xor2_characterization.csv
src/: Sim-Manager.py
tests/: TESTS_GUIDE.md  benchmark_para_fast.py  benchmark_parallel.py  benchmark_pool_optimization.py  check_netlist_speed.py  debug_cost.py  exemple_pyngs.py  inspect_temp_netlist.py  run_inference.py  single_cel.py  temp_test.py  test_complete_stack.py  test_full_simulation.py  test_generate_xor2.py  test_models_loading.py  test_models_with_cell.py  test_multi_netlist.py  test_multiple_cells.py  test_multiple_cells_v2.py  test_netlist_generator.py  test_netlist_generator_v2.py  test_netlist_modifiable.py  test_pdk_manager.py  test_pdk_structure.py  test_rc.py  test_rl_parallel.py  test_scale_fix.py  test_sequential_pool.py  test_simulation_with_modification.py  test_variation.py  test_xor2.py  test_xor2_full.py  tests.rar  train.py  train_and_save_weight.py  utils.md  visualize_weights.py
(+60 files in other folders)
