[project]
name = "i4-comsc"
version = "0.1.0"
description = "Projet de simulation ngspice et environnement Python pour I4 COMSC."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Vincent", email = "vincent.cauquil@cpe.fr" },
]

# Dépendances Python nécessaires au projet
dependencies = [
    "numpy",
    "pandas",
    "stable-baselines3",
    "gymnasium",
    "ciel",
    "PyQt6",
    "pyqtgraph",
]

# Classificateurs PyPI 
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Simulation",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

